# hyperliquid-copy-trader

./: .env.example  .gitignore  .pypirc.example  LICENSE  MANIFEST.in  PUBLISH.md  README.md  WALLET_PROFILER_README.md  metrics_report_20260120_215843.json  metrics_report_20260120_220557.json  metrics_report_20260120_220757.json  metrics_report_20260120_221331.json  pyproject.toml  requirements.txt  setup.py
hypertrack/: 1_record_data.py  2_run_model.py  3_frontend.py  __init__.py  chain_subscriber.py  chain_test.py  constants.py  metrics_tracker.py  recorder.py  recorder_bbo.py  recorder_candle.py  recorder_l2Book.py  recorder_trades.py  stream_client.py  wallet_profiler.py
report_examples/: final_report.txt  wallet_dashboard.html
